--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -8,10 +8,11 @@
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
   </head>
-<body>
-   <div class="container">
-     <h1>Lunch Checker</h1>
-
+<script src="app.js"></script>
+<body ng-app="LunchCheckerApp">
+   <div class="container" ng-controller="MyFirstController">
+     <h1>Lunch Checker for {{$scope.name}}</h1>
+     
          <div class="form-group">
              <input id="lunch-menu" type="text"
              placeholder="list comma separated dishes you usually have for lunch"
