--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -8,6 +8,7 @@
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
   </head>
+<script src="angular.min.js"</script>>
 <script src="app.js"></script>
 <body ng-app="LunchCheckerApp">
    <div class="container" ng-controller="MyFirstController">
